--- a/partials/index-intro.html
+++ b/partials/index-intro.html
@@ -71,10 +71,8 @@
                                 <div class="form-actions">
                                     <div class="row">
                                         <div class="col-md-offset-3 col-md-9">
-                                            <a href="javascript:;" data-target="result" onclick="if($('body').scrollTop(0)){hideshowPanelResult(this, 'SearchContentPanel')}" class="btn btn-circle btn-sm orange form-submit-btn"><i class="fa fa-search"></i> Chercher
+                                            <a (click)="showResult();" class="btn btn-circle btn-sm orange form-submit-btn"><i class="fa fa-search"></i> Chercher
                                             </a>
-
-
                                         </div>
                                     </div>
                                 </div>
@@ -85,7 +83,10 @@
                 </div>
 
                 <div id="SearchContentPanel" class="col-md-8">
-                    <div id="carousel-example-generic" class="carousel slide carousel-fade " >
+                    
+               
+                        
+                    <div id="carousel-example-generic" class="carousel slide carousel-fade " *ngIf="showSecondView == 'slider'" >
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -154,8 +155,9 @@
                             </div>
                         </div>
                     </div>
+                    
 
-                    <div id="result" class="portlet light ">
+                    <div  class="portlet light " *ngIf="showSecondView == 'result'" >
 
                         <div class="portlet-title">
                             <div class="caption caption-md">
@@ -166,7 +168,7 @@
                             </div>
                             <div class="actions">
                                 <div class="btn-group btn-group-devided" data-toggle="buttons">
-                                    <button  type="button" data-hide="result" data-show="carousel-example-generic" class="btn white btn-sm close-popUp-btn"></button>
+                                    <button (click)="showSLider();" type="button" class="btn white btn-sm close-popUp-btn"></button>
                                 </div>
                             </div>
                         </div>
@@ -344,6 +346,8 @@
                 </div>
             </div>
         </section>
+       
+       
         <div class="modaldetails" style="display: none">
             
             <div class="container">
