--- a/partials/index-intro.html
+++ b/partials/index-intro.html
@@ -82,10 +82,7 @@
                     </div>
                 </div>
 
-                <div id="SearchContentPanel" class="col-md-8">
-                    
-               
-                        
+                <div id="SearchContentPanel" class="col-md-8">              
                     <div id="carousel-example-generic" class="carousel slide carousel-fade " *ngIf="showSecondView == 'slider'" >
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
@@ -106,7 +103,6 @@
                                     
                                 </div>
                             </div>
-                            
                             <div class="item carousel-item-one" >
                                 <div class="container">
                                     <h3 class="carousel-position-one animate-delay carousel-title-v1" data-animation="animated fadeInDown">
@@ -175,6 +171,7 @@
                         <div class="portlet-body scrollableResult">
 
                             <div class="table-scrollable table-scrollable-borderless">
+                          
                                 <table class="table table-hover table-light">
                                     <thead>
                                         <tr >
@@ -185,158 +182,18 @@
                                             <th>  </th>
                                         </tr>
                                     </thead>
-                                    <tr class="cd-section" >
+                                    <tr class="cd-section" *ngFor="let doctor of doctors">
                                         <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> </td>
+                                            <img class="user-pic" src="{{doctor.picture}}"> </td>
                                         <td>
-                                            <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a>
+                                            <a href="javascript:;" class="primary-link">{{doctor.name}}</a>
                                         </td>
 
-                                        <td> Généraliste </td>
-                                        <td> Onex / Genève </td>
+                                        <td> {{doctor.spec}} </td>
+                                        <td> {{doctor.location}} </td>
                                         <td >
                                             <a href="javascript:;" class="btn-consult-detail"> 
                                             </a>
-                                            
-                                        </td>
-
-                                    </tr>
-                                    <tr  class="cd-section">
-                                        <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/3.png"> </td>
-                                        <td>
-                                            <a href="javascript:;" class="primary-link">DR. Denis CHEVRELEY</a>
-                                        </td>
-
-                                        <td> Généraliste </td>
-                                        <td> Avry / Fribourg </td>
-                                        <td >
-                                            <a href="javascript:;" class="btn-consult-detail"> 
-                                            </a>
-                                            
-                                        </td>
-                                    </tr>
-                                    <tr class="cd-section">
-                                        <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/2.png"> </td>
-                                        <td>
-                                            <a href="javascript:;" class="primary-link">DR. Monique DUNANT</a>
-                                        </td>
-
-                                        <td> Généraliste </td>
-                                        <td> Nyon / Vaud </td>
-                                        <td >
-                                            <a href="javascript:;" class="btn-consult-detail"> 
-                                            </a>
-                                            
-                                        </td>
-                                    </tr>
-
-                                    <tr class="cd-section">
-                                        <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/4.png"> </td>
-                                        <td>
-                                            <a href="javascript:;" class="primary-link">DR. Jean FAVRE</a>
-                                        </td>
-
-                                        <td> Dermatologue </td>
-                                        <td> Vex / Valais </td>
-                                        <td >
-                                            <a href="javascript:;" class="btn-consult-detail"> 
-                                            </a>
-                                            
-                                        </td>
-                                    </tr>
-                                    <tr class="cd-section">
-                                        <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/5.png"> </td>
-                                        <td>
-                                            <a href="javascript:;" class="primary-link">DR. Jacqueline DUPONT</a>
-                                        </td>
-
-                                        <td> Gynécologue </td>
-                                        <td> Lancy / Genève </td>
-                                        <td >
-                                            <a href="javascript:;" class="btn-consult-detail"> 
-                                            </a>
-                                            
-                                        </td>
-                                    </tr>
-                                    
-                                    <tr class="cd-section" >
-                                        <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> </td>
-                                        <td>
-                                            <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a>
-                                        </td>
-
-                                        <td> Généraliste </td>
-                                        <td> Onex / Genève </td>
-                                        <td >
-                                            <a href="javascript:;" class="btn-consult-detail"> 
-                                            </a>
-                                            
-                                        </td>
-                                    </tr>
-                                    <tr  class="cd-section">
-                                        <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/3.png"> </td>
-                                        <td>
-                                            <a href="javascript:;" class="primary-link">DR. Denis CHEVRELEY</a>
-                                        </td>
-
-                                        <td> Généraliste </td>
-                                        <td> Avry / Fribourg </td>
-                                        <td >
-                                            <a href="javascript:;" class="btn-consult-detail"> 
-                                            </a>
-                                            
-                                        </td>
-                                    </tr>
-                                    <tr class="cd-section">
-                                        <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/2.png"> </td>
-                                        <td>
-                                            <a href="javascript:;" class="primary-link">DR. Monique DUNANT</a>
-                                        </td>
-
-                                        <td> Généraliste </td>
-                                        <td> Nyon / Vaud </td>
-                                        <td >
-                                            <a href="javascript:;" class="btn-consult-detail"> 
-                                            </a>
-                                            
-                                        </td>
-                                    </tr>
-
-                                    <tr class="cd-section">
-                                        <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/4.png"> </td>
-                                        <td>
-                                            <a href="javascript:;" class="primary-link">DR. Jean FAVRE</a>
-                                        </td>
-
-                                        <td> Dermatologue </td>
-                                        <td> Vex / Valais </td>
-                                        <td >
-                                            <a href="javascript:;" class="btn-consult-detail"> 
-                                            </a>
-                                            
-                                        </td>
-                                    </tr>
-                                    <tr class="cd-section">
-                                        <td class="fit">
-                                            <img class="user-pic" src="assets/onepage2/img/avatar/5.png"> </td>
-                                        <td>
-                                            <a href="javascript:;" class="primary-link">DR. Jacqueline DUPONT</a>
-                                        </td>
-
-                                        <td> Gynécologue </td>
-                                        <td> Lancy / Genève </td>
-                                        <td >
-                                            <a href="javascript:;" class="btn-consult-detail"> 
-                                            </a>
-                                            
                                         </td>
                                     </tr>
                                 </table>
