--- a/partials/index.html
+++ b/partials/index.html
@@ -1,5 +1,7 @@
 <header-component></header-component>
-<intro-component></intro-component>
+<intro-component (onProfileOpen)="onProfileOpen($event)" (onProfileClose)="onProfileClose($event)"></intro-component>
+<div *ngIf="closedProfile == true">
 <about-component></about-component>
 <customer-component></customer-component>
 <contact-component></contact-component>
+</div>
