--- a/includes/index-profile.html
+++ b/includes/index-profile.html
@@ -2,7 +2,7 @@
             
             <div class="container">
                 <div class="details-header"> 
-                    <a ng-click="showResult();" class="cd-modal-close">Close</a>
+                    <a ng-click="closeProfile();" class="cd-modal-close">Close</a>
                 </div>
                 
                 <div class="detailsContent">
@@ -14,7 +14,7 @@
                                 <div class="portlet light profile-sidebar-portlet ">
                                     <!-- SIDEBAR USERPIC -->
                                     <div class="profile-userpic col-sm-4 col-md-4">
-                                        <img src="{{selectedDoctor.picture}}}" class="img-responsive" alt=""> </div>
+                                        <img src="{{selectedDoctor.picture}}" class="img-responsive" alt=""> </div>
                                     <!-- END SIDEBAR USERPIC -->
                                     <!-- SIDEBAR USER TITLE -->
                                    
