--- a/includes/index-header.html
+++ b/includes/index-header.html
@@ -78,7 +78,7 @@
                             </li>
 
                             <li class="page-scroll">
-                                <a class="btn btn-circle orange btn-sm" data-target="#responsive" data-toggle="modal"> Se connecter d<greetUser></greetUser>d </a>
+                                <a class="btn btn-circle orange btn-sm" data-target="#responsive" data-toggle="modal"> Se connecter </a>
 
                             </li>
 
