--- a/includes/index-connection.html
+++ b/includes/index-connection.html
@@ -1,4 +1,4 @@
-<div id="responsive"  class="modal fade login-popUp" style="border-radius: 0;" tabindex="-1" data-width="760">
+<div id="responsive"  class="modal fade login-popUp" style="border-radius: 0;    margin-left: 300px;" tabindex="-1" data-width="760">
                 <div class="modal-header" style="border: none">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                 </div>
