add call back to the scheduler

--- a/includes/index-profile.html
+++ b/includes/index-profile.html
@@ -135,7 +135,7 @@
                                             <div class="portlet-body">
                                        
                                   
-                                              <scheduler callback="alert('jen');" excludeddates="selectedDoctor.excludedDates"></scheduler>
+                                              <scheduler excludeddates="selectedDoctor.excludedDates" selecttime="getSeleectedDate(selected);"  ></scheduler>
                                           
                                           
                                         </div>
