--- a/partials/connexion.component.html
+++ b/partials/connexion.component.html
@@ -98,7 +98,7 @@
         <div class="row">
             <div class="col-md-6 login-form">
                 <div>
-                    <h4 ng-if="!$ctrl.isConnected()" style="padding-left: 15px;font-size: 24px;">Se connecter</h4>
+                    <h4 ng-if="!$ctrl.isConnected()" style="padding-left: 15px;font-size: 24px;margin-bottom: 0;">Se connecter</h4>
                     <div class="portlet searchForm">
 
                         <div class="portlet-body form">
@@ -129,7 +129,7 @@
                                                         </a>
 
 
-                                        <div ng-if="$ctrl.connectionError" style="color:red"><br/>
+                                        <div ng-if="$ctrl.connectionError" class="connection-error" style="color:red">
                                             <b> Ce compte  n’existe pas. Entrez un autre compte ou obtenez-en un nouveau. </b>
                                         </div>
                                         <div ng-if="$ctrl.isConnected()" style="color:green"><br/>
@@ -176,7 +176,7 @@
     <div class="modal-body">
         <div class="row">
             <div class="col-md-12 login-form">
-                <div class="">
+                <div class="inscription-form">
                     <h4 style="padding-left: 15px;font-size: 24px;">Inscription</h4>
                     <div class="portlet searchForm">
 
@@ -253,7 +253,16 @@
 
 
 <div id="step1" class="modal fade login-popUp settingsModal" style="border-radius: 0;" tabindex="-1" data-width="760">
-    <div class="f1-steps">
+    <div class="modal-header" style="border: none">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+
+                </div>
+    <div class="modal-body" style="padding: 0;">
+                    <div class="row">
+                        <div class="col-md-12 login-form">
+                             <div class="col-md-12 form-box">
+                                 <form role="form" action="" method="post" class="f1">
+                                      <div class="f1-steps">
         <div class="f1-progress">
             <div class="f1-progress-line" data-now-value="50" data-number-of-steps="2" style="width: 50%;"></div>
         </div>
@@ -306,9 +315,24 @@
 
 
     </div>
+                                 </form>
+                             </div>
+                        </div>
+                    </div>
+    </div>
+   
 </div>
 <div id="step2" class="modal fade login-popUp settingsModal" style="border-radius: 0;" tabindex="-1" data-width="760">
-    <div class="f1-steps">
+   <div class="modal-header" style="border: none">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+
+                </div>
+    <div class="modal-body" style="padding: 0;">
+                    <div class="row">
+                        <div class="col-md-12 login-form">
+                             <div class="col-md-12 form-box">
+                                 <form role="form" action="" method="post" class="f1">
+                                      <div class="f1-steps">
         <div class="f1-progress">
             <div class="f1-progress-line" data-now-value="50" data-number-of-steps="2" style="width: 50%;"></div>
         </div>
@@ -329,5 +353,12 @@
 
 
     </div>
+                                 </form>
+                             </div>
+                        </div>
+                    </div>
+    </div>
+    
+   
 </div>
 </div>
