--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,6 +7,29 @@ body{
 /*****************************************************
 *** Customers ***
 *****************************************************/
+.login-form .form-group .col-md-12{
+    padding: 0;
+    margin-bottom: 20px;
+}
+.connection-error.ng-scope {
+    font-size: 12px;
+}
+
+.inscription-form .form-group{
+    width: 100%;
+    margin: 0 !important
+}
+.connection-error.ng-scope b{
+    padding-top: 10px;
+    display: block;
+    float: left;
+    position: absolute;
+    margin-top: 49px;
+}
+#SearchContentPanel .portlet.ligh{
+        padding: 15px;
+            max-height: 463px !important;
+}
 .row.detailsRow {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -772,6 +795,10 @@ th.fc-day-header.fc-widget-header {
     box-shadow: 5px 5px rgba(102, 102, 102, 0.1);
     border: 1px solid #efefef;
     margin-top: 109px !important;
+    max-height: initial;
+    overflow-y: initial;
+    width: auto;
+    margin-left: 0;
 }
 .datepicker-dropdown:before , .datepicker-dropdown:after{
    display: none !important;
@@ -1062,18 +1089,27 @@ a.btn.btn-circle.btn-sm.orange.form-submit-btn i{
   border: none;
 }
 .searchForm  .form-body{
-  padding:0;
+    padding:0;
 }
 .no-padding{
-  padding: 0 !important;  
+    padding: 0 !important;  
 }
 .autocomplete-text span {
-    font-size: 18px;
+    font-size: 14px;
     font-weight: normal !important;
+    display: inline;
 }
 .autocomplete-text span strong {
-     font-size: 18px;
+    font-size: 14px;
     font-weight: normal !important;
+    display: inherit;
+}
+.dropdown-menu > li:hover > a, .dropdown-menu > li.active > a, .dropdown-menu > li.active:hover > a {
+    text-decoration: none;
+    background-image: none;
+    background-color: #5ab3d1;
+    color: #fff;
+    filter: none;
 }
 .autocomplete-name {
     width: 100%;
@@ -1413,7 +1449,20 @@ height: 200px;
     }
 }
 @media (max-width: 991px) {
-   
+   #SearchContentPanel .portlet.ligh {
+    padding: 15px;
+    max-height: initial !important;
+    background: #fff !important;
+    top: 0!important;
+    width: 100% !important;
+    height: auto !important;
+    padding-top: 94px !important;
+    float: left !important;
+    display: block !important;
+    padding-right: 0 !important;
+    min-height: 100% !important;
+    overflow: hidden !important;
+}
     .portlet.searchForm{
         padding: 0;
     }
@@ -1541,7 +1590,11 @@ body {
         display: none !important
     }
     #SearchContentPanel{
-       height: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
     }
     #result{
          position: fixed;
@@ -3410,7 +3463,12 @@ a.btn.btn-circle.btn-sm.orange.form-submit-btn.inscrire-form-btn {
     font-size: 18px; } }
 
   .dropdown-menu {
-            max-height: 470px;
-            overflow-y: auto;
-            width:100%
+               max-height: 470px;
+    overflow-y: auto;
+    width: 100%;
+    margin-left: -15px
         }
+[uib-typeahead-popup].dropdown-menu {
+    display: block;
+    margin: 0;
+}
