--- a/partials/connexion.component.html
+++ b/partials/connexion.component.html
@@ -91,7 +91,7 @@
                                     <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                        <li ><a>Mon Profile</a></li>
+                                        <li ><a href="#!/patient">Mon Profile</a></li>
                                         <li ><a>Mes médecins</a></li>
                                         <li ><a>Mez rendez-vous</a></li>
                                         <li ><a>Mez parrainages</a></li>
