--- a/partials/connexion.component.html
+++ b/partials/connexion.component.html
@@ -92,10 +92,10 @@
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                         <li ><a href="#!/patient">Mon Profile</a></li>
-                                        <li ><a>Mes médecins</a></li>
-                                        <li ><a>Mez rendez-vous</a></li>
-                                        <li ><a>Mez parrainages</a></li>
-                                        <li ><a>Mez proches</a></li>
+                                        <li ><a href="#!/patient/doctors">Mes médecins</a></li>
+                                        <li ><a href="#!/patient/appointments">Mez rendez-vous</a></li>
+                                        <li ><a href="#!/patient/proposing">Mez parrainages</a></li>
+                                        <li ><a href="#!/patient/relatives">Mez proches</a></li>
 
 
                                         <li role="separator" class="divider"></li>
