--- a/partials/patient.component.html
+++ b/partials/patient.component.html
@@ -35,19 +35,19 @@
         </li>
         <li>
             <!--class="active"-->
-            <a href="medecins.html">
+            <a href="m#!/patient/doctors">
                                                     Mes médecins </a>
         </li>
         <li>
-            <a href="rendez-vous.html">
+            <a href="m#!/patient/appointments">
                                                    Mes rendez-vous </a>
         </li>
         <li>
-            <a href="parrainages.html">
+            <a href="m#!/patient/proposing">
                                                    Mes parrainages </a>
         </li>
         <li>
-            <a href="proches.html">
+            <a href="m#!/patient/relatives">
                                                    Mes proches </a>
         </li>
     </ul>
